--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "typescript-nextjs-starter",
-  "description": "A TypeScript starter for Next.js that includes all you need to build amazing projects",
+  "name": "gamers-club-test",
+  "description": "Interactive widget with players informations for proof of knowledge for GC",
   "version": "1.0.0",
   "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (@jpedroschmitz)",
+  "author": "Daniel Luiz Alves <daniel.madeireira@gmail.com> (@capivara.dev)",
   "license": "MIT",
   "keywords": [
     "nextjs",
@@ -14,6 +14,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watch",
     "type-check": "tsc",
     "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
     "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
@@ -26,13 +27,17 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components": "5.1.26",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
     "@types/node": "16.11.64",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
@@ -45,8 +50,13 @@
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "4.2.1",
     "husky": "8.0.1",
+    "jest": "29.2.0",
+    "jest-environment-jsdom": "29.2.0",
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "typescript": "4.8.4"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
