--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "1.1.3",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-countup": "6.3.2",
     "react-dom": "18.2.0",
     "styled-components": "5.3.6"
   },
