--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "dependencies": {
     "@types/styled-components": "5.1.26",
     "axios": "1.1.3",
+    "i18next": "22.0.1",
     "next": "12.3.1",
+    "next-i18next": "12.1.0",
     "react": "18.2.0",
     "react-countup": "6.3.2",
     "react-dom": "18.2.0",
+    "react-i18next": "11.18.6",
     "styled-components": "5.3.6"
   },
   "devDependencies": {
